# safir_openstack_user_manager

./: .gitignore  README.rst  requirements.txt  setup.cfg  tox.ini
openstack_user_manager/: log.py  manager.py
openstack_user_manager/conf/: clouds.yaml
openstack_user_manager/tests/: test_openstack_connector.py
