[metadata]
name = safir_openstack_user_manager
summary = OpenStack User Manager for use with Django OpenStack Auth
description-file =
    README.rst
author = TUBITAK B3LAB
author-email = safir.iletisim@tubitak.gov.tr
home-page = http://www.b3lab.org/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    openstack_user_manager

[nosetests]
verbosity=2
detailed-errors=1
